[package]
name = "fix_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unique_id = "0.1.5"
binaryfile = { git = "https://github.com/sugarflowers/binaryfile.git" }
sjis = { git = "https://github.com/sugarflowers/sjis.git" }
pathobj = { git = "https://github.com/sugarflowers/pathobj.git" }
anyhow = "1.0.79"

